feat(repartidores): agregar consultas dinamicas, paginacion y correccion de swagger
